frontend/yas/YasParser.js
// Generated from Yas.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var YasListener = require('./YasListener').YasListener;
var grammarFileName = "Yas.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'('", "')'", "'['", "','", "']'", "'-'", "'&'", 
                     "'|'", null, "'any'", "'all'", "'and'", "'in'", "'not'", 
                     "'max'", "'min'", "'sum'", "'or'", "'<'", "'<='", "'='", 
                     "'!='", "'>='", "'>'", "'true'", "'false'", "'bytes'", 
                     "'duration'", "'packets'", "'ports'", "'tcp'", "'udp'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      "METRIC_PREFIX", "ANY", "ALL", "AND", "IN", "NOT", 
                      "MAX", "MIN", "SUM", "OR", "LT", "LTE", "EQ", "NEQ", 
                      "GTE", "GT", "TRUE", "FALSE", "BYTES", "DURATION", 
                      "PACKETS", "PORTS", "TCP", "UDP", "NUMBER", "WORD", 
                      "WHITESPACE", "NEWLINE", "LEFTOVER" ];

var ruleNames =  [ "expr", "doc", "intLiteral", "intVar", "intExpr", "intsetLiteral", 
                   "intsetVar", "intsetExpr", "boolLiteral", "boolVar", 
                   "boolExpr" ];

function YasParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

YasParser.prototype = Object.create(antlr4.Parser.prototype);
YasParser.prototype.constructor = YasParser;

Object.defineProperty(YasParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

YasParser.EOF = antlr4.Token.EOF;
YasParser.T__0 = 1;
YasParser.T__1 = 2;
YasParser.T__2 = 3;
YasParser.T__3 = 4;
YasParser.T__4 = 5;
YasParser.T__5 = 6;
YasParser.T__6 = 7;
YasParser.T__7 = 8;
YasParser.METRIC_PREFIX = 9;
YasParser.ANY = 10;
YasParser.ALL = 11;
YasParser.AND = 12;
YasParser.IN = 13;
YasParser.NOT = 14;
YasParser.MAX = 15;
YasParser.MIN = 16;
YasParser.SUM = 17;
YasParser.OR = 18;
YasParser.LT = 19;
YasParser.LTE = 20;
YasParser.EQ = 21;
YasParser.NEQ = 22;
YasParser.GTE = 23;
YasParser.GT = 24;
YasParser.TRUE = 25;
YasParser.FALSE = 26;
YasParser.BYTES = 27;
YasParser.DURATION = 28;
YasParser.PACKETS = 29;
YasParser.PORTS = 30;
YasParser.TCP = 31;
YasParser.UDP = 32;
YasParser.NUMBER = 33;
YasParser.WORD = 34;
YasParser.WHITESPACE = 35;
YasParser.NEWLINE = 36;
YasParser.LEFTOVER = 37;

YasParser.RULE_expr = 0;
YasParser.RULE_doc = 1;
YasParser.RULE_intLiteral = 2;
YasParser.RULE_intVar = 3;
YasParser.RULE_intExpr = 4;
YasParser.RULE_intsetLiteral = 5;
YasParser.RULE_intsetVar = 6;
YasParser.RULE_intsetExpr = 7;
YasParser.RULE_boolLiteral = 8;
YasParser.RULE_boolVar = 9;
YasParser.RULE_boolExpr = 10;

function ExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = YasParser.RULE_expr;
    return this;
}

ExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExprContext.prototype.constructor = ExprContext;

ExprContext.prototype.boolExpr = function() {
    return this.getTypedRuleContext(BoolExprContext,0);
};

ExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.enterExpr(this);
	}
};

ExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.exitExpr(this);
	}
};




YasParser.ExprContext = ExprContext;

YasParser.prototype.expr = function() {

    var localctx = new ExprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, YasParser.RULE_expr);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 22;
        this.boolExpr(0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DocContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = YasParser.RULE_doc;
    return this;
}

DocContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DocContext.prototype.constructor = DocContext;

DocContext.prototype.expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExprContext);
    } else {
        return this.getTypedRuleContext(ExprContext,i);
    }
};

DocContext.prototype.NEWLINE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(YasParser.NEWLINE);
    } else {
        return this.getToken(YasParser.NEWLINE, i);
    }
};


DocContext.prototype.enterRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.enterDoc(this);
	}
};

DocContext.prototype.exitRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.exitDoc(this);
	}
};




YasParser.DocContext = DocContext;

YasParser.prototype.doc = function() {

    var localctx = new DocContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, YasParser.RULE_doc);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 24;
        this.expr();
        this.state = 29;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,0,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 25;
                this.match(YasParser.NEWLINE);
                this.state = 26;
                this.expr(); 
            }
            this.state = 31;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,0,this._ctx);
        }

        this.state = 33;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===YasParser.NEWLINE) {
            this.state = 32;
            this.match(YasParser.NEWLINE);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function IntLiteralContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = YasParser.RULE_intLiteral;
    return this;
}

IntLiteralContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IntLiteralContext.prototype.constructor = IntLiteralContext;

IntLiteralContext.prototype.NUMBER = function() {
    return this.getToken(YasParser.NUMBER, 0);
};

IntLiteralContext.prototype.METRIC_PREFIX = function() {
    return this.getToken(YasParser.METRIC_PREFIX, 0);
};

IntLiteralContext.prototype.enterRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.enterIntLiteral(this);
	}
};

IntLiteralContext.prototype.exitRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.exitIntLiteral(this);
	}
};




YasParser.IntLiteralContext = IntLiteralContext;

YasParser.prototype.intLiteral = function() {

    var localctx = new IntLiteralContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, YasParser.RULE_intLiteral);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 35;
        this.match(YasParser.NUMBER);
        this.state = 37;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        if(la_===1) {
            this.state = 36;
            this.match(YasParser.METRIC_PREFIX);

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function IntVarContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = YasParser.RULE_intVar;
    return this;
}

IntVarContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IntVarContext.prototype.constructor = IntVarContext;

IntVarContext.prototype.DURATION = function() {
    return this.getToken(YasParser.DURATION, 0);
};

IntVarContext.prototype.enterRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.enterIntVar(this);
	}
};

IntVarContext.prototype.exitRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.exitIntVar(this);
	}
};




YasParser.IntVarContext = IntVarContext;

YasParser.prototype.intVar = function() {

    var localctx = new IntVarContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, YasParser.RULE_intVar);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 39;
        this.match(YasParser.DURATION);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function IntExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = YasParser.RULE_intExpr;
    return this;
}

IntExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IntExprContext.prototype.constructor = IntExprContext;


 
IntExprContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function IntLiteralExprContext(parser, ctx) {
	IntExprContext.call(this, parser);
    IntExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

IntLiteralExprContext.prototype = Object.create(IntExprContext.prototype);
IntLiteralExprContext.prototype.constructor = IntLiteralExprContext;

YasParser.IntLiteralExprContext = IntLiteralExprContext;

IntLiteralExprContext.prototype.intLiteral = function() {
    return this.getTypedRuleContext(IntLiteralContext,0);
};
IntLiteralExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.enterIntLiteralExpr(this);
	}
};

IntLiteralExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.exitIntLiteralExpr(this);
	}
};


function IntVarExprContext(parser, ctx) {
	IntExprContext.call(this, parser);
    IntExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

IntVarExprContext.prototype = Object.create(IntExprContext.prototype);
IntVarExprContext.prototype.constructor = IntVarExprContext;

YasParser.IntVarExprContext = IntVarExprContext;

IntVarExprContext.prototype.intVar = function() {
    return this.getTypedRuleContext(IntVarContext,0);
};
IntVarExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.enterIntVarExpr(this);
	}
};

IntVarExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.exitIntVarExpr(this);
	}
};


function IntParenExprContext(parser, ctx) {
	IntExprContext.call(this, parser);
    IntExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

IntParenExprContext.prototype = Object.create(IntExprContext.prototype);
IntParenExprContext.prototype.constructor = IntParenExprContext;

YasParser.IntParenExprContext = IntParenExprContext;

IntParenExprContext.prototype.intExpr = function() {
    return this.getTypedRuleContext(IntExprContext,0);
};
IntParenExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.enterIntParenExpr(this);
	}
};

IntParenExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.exitIntParenExpr(this);
	}
};


function IntFunExprContext(parser, ctx) {
	IntExprContext.call(this, parser);
    IntExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

IntFunExprContext.prototype = Object.create(IntExprContext.prototype);
IntFunExprContext.prototype.constructor = IntFunExprContext;

YasParser.IntFunExprContext = IntFunExprContext;

IntFunExprContext.prototype.intsetExpr = function() {
    return this.getTypedRuleContext(IntsetExprContext,0);
};

IntFunExprContext.prototype.MAX = function() {
    return this.getToken(YasParser.MAX, 0);
};

IntFunExprContext.prototype.MIN = function() {
    return this.getToken(YasParser.MIN, 0);
};

IntFunExprContext.prototype.SUM = function() {
    return this.getToken(YasParser.SUM, 0);
};
IntFunExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.enterIntFunExpr(this);
	}
};

IntFunExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.exitIntFunExpr(this);
	}
};



YasParser.IntExprContext = IntExprContext;

YasParser.prototype.intExpr = function() {

    var localctx = new IntExprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, YasParser.RULE_intExpr);
    var _la = 0; // Token type
    try {
        this.state = 49;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case YasParser.T__0:
            localctx = new IntParenExprContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 41;
            this.match(YasParser.T__0);
            this.state = 42;
            this.intExpr();
            this.state = 43;
            this.match(YasParser.T__1);
            break;
        case YasParser.MAX:
        case YasParser.MIN:
        case YasParser.SUM:
            localctx = new IntFunExprContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 45;
            _la = this._input.LA(1);
            if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << YasParser.MAX) | (1 << YasParser.MIN) | (1 << YasParser.SUM))) !== 0))) {
            this._errHandler.recoverInline(this);
            }
            else {
            	this._errHandler.reportMatch(this);
                this.consume();
            }
            this.state = 46;
            this.intsetExpr();
            break;
        case YasParser.DURATION:
            localctx = new IntVarExprContext(this, localctx);
            this.enterOuterAlt(localctx, 3);
            this.state = 47;
            this.intVar();
            break;
        case YasParser.NUMBER:
            localctx = new IntLiteralExprContext(this, localctx);
            this.enterOuterAlt(localctx, 4);
            this.state = 48;
            this.intLiteral();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function IntsetLiteralContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = YasParser.RULE_intsetLiteral;
    return this;
}

IntsetLiteralContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IntsetLiteralContext.prototype.constructor = IntsetLiteralContext;

IntsetLiteralContext.prototype.intExpr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(IntExprContext);
    } else {
        return this.getTypedRuleContext(IntExprContext,i);
    }
};

IntsetLiteralContext.prototype.enterRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.enterIntsetLiteral(this);
	}
};

IntsetLiteralContext.prototype.exitRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.exitIntsetLiteral(this);
	}
};




YasParser.IntsetLiteralContext = IntsetLiteralContext;

YasParser.prototype.intsetLiteral = function() {

    var localctx = new IntsetLiteralContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, YasParser.RULE_intsetLiteral);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 51;
        this.match(YasParser.T__2);
        this.state = 52;
        this.intExpr();
        this.state = 57;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 53;
                this.match(YasParser.T__3);
                this.state = 54;
                this.intExpr(); 
            }
            this.state = 59;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
        }

        this.state = 61;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===YasParser.T__3) {
            this.state = 60;
            this.match(YasParser.T__3);
        }

        this.state = 63;
        this.match(YasParser.T__4);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function IntsetVarContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = YasParser.RULE_intsetVar;
    return this;
}

IntsetVarContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IntsetVarContext.prototype.constructor = IntsetVarContext;

IntsetVarContext.prototype.BYTES = function() {
    return this.getToken(YasParser.BYTES, 0);
};

IntsetVarContext.prototype.PACKETS = function() {
    return this.getToken(YasParser.PACKETS, 0);
};

IntsetVarContext.prototype.PORTS = function() {
    return this.getToken(YasParser.PORTS, 0);
};

IntsetVarContext.prototype.enterRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.enterIntsetVar(this);
	}
};

IntsetVarContext.prototype.exitRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.exitIntsetVar(this);
	}
};




YasParser.IntsetVarContext = IntsetVarContext;

YasParser.prototype.intsetVar = function() {

    var localctx = new IntsetVarContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, YasParser.RULE_intsetVar);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 65;
        _la = this._input.LA(1);
        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << YasParser.BYTES) | (1 << YasParser.PACKETS) | (1 << YasParser.PORTS))) !== 0))) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function IntsetExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = YasParser.RULE_intsetExpr;
    return this;
}

IntsetExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IntsetExprContext.prototype.constructor = IntsetExprContext;


 
IntsetExprContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function IntsetParenExprContext(parser, ctx) {
	IntsetExprContext.call(this, parser);
    IntsetExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

IntsetParenExprContext.prototype = Object.create(IntsetExprContext.prototype);
IntsetParenExprContext.prototype.constructor = IntsetParenExprContext;

YasParser.IntsetParenExprContext = IntsetParenExprContext;

IntsetParenExprContext.prototype.intsetExpr = function() {
    return this.getTypedRuleContext(IntsetExprContext,0);
};
IntsetParenExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.enterIntsetParenExpr(this);
	}
};

IntsetParenExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.exitIntsetParenExpr(this);
	}
};


function IntsetLiteralExprContext(parser, ctx) {
	IntsetExprContext.call(this, parser);
    IntsetExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

IntsetLiteralExprContext.prototype = Object.create(IntsetExprContext.prototype);
IntsetLiteralExprContext.prototype.constructor = IntsetLiteralExprContext;

YasParser.IntsetLiteralExprContext = IntsetLiteralExprContext;

IntsetLiteralExprContext.prototype.intsetLiteral = function() {
    return this.getTypedRuleContext(IntsetLiteralContext,0);
};
IntsetLiteralExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.enterIntsetLiteralExpr(this);
	}
};

IntsetLiteralExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.exitIntsetLiteralExpr(this);
	}
};


function IntsetVarExprContext(parser, ctx) {
	IntsetExprContext.call(this, parser);
    IntsetExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

IntsetVarExprContext.prototype = Object.create(IntsetExprContext.prototype);
IntsetVarExprContext.prototype.constructor = IntsetVarExprContext;

YasParser.IntsetVarExprContext = IntsetVarExprContext;

IntsetVarExprContext.prototype.intsetVar = function() {
    return this.getTypedRuleContext(IntsetVarContext,0);
};
IntsetVarExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.enterIntsetVarExpr(this);
	}
};

IntsetVarExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.exitIntsetVarExpr(this);
	}
};


function IntsetDiffExprContext(parser, ctx) {
	IntsetExprContext.call(this, parser);
    IntsetExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

IntsetDiffExprContext.prototype = Object.create(IntsetExprContext.prototype);
IntsetDiffExprContext.prototype.constructor = IntsetDiffExprContext;

YasParser.IntsetDiffExprContext = IntsetDiffExprContext;

IntsetDiffExprContext.prototype.intsetLiteral = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(IntsetLiteralContext);
    } else {
        return this.getTypedRuleContext(IntsetLiteralContext,i);
    }
};
IntsetDiffExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.enterIntsetDiffExpr(this);
	}
};

IntsetDiffExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.exitIntsetDiffExpr(this);
	}
};


function IntsetUnionExprContext(parser, ctx) {
	IntsetExprContext.call(this, parser);
    IntsetExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

IntsetUnionExprContext.prototype = Object.create(IntsetExprContext.prototype);
IntsetUnionExprContext.prototype.constructor = IntsetUnionExprContext;

YasParser.IntsetUnionExprContext = IntsetUnionExprContext;

IntsetUnionExprContext.prototype.intsetLiteral = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(IntsetLiteralContext);
    } else {
        return this.getTypedRuleContext(IntsetLiteralContext,i);
    }
};
IntsetUnionExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.enterIntsetUnionExpr(this);
	}
};

IntsetUnionExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.exitIntsetUnionExpr(this);
	}
};


function IntsetInterExprContext(parser, ctx) {
	IntsetExprContext.call(this, parser);
    IntsetExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

IntsetInterExprContext.prototype = Object.create(IntsetExprContext.prototype);
IntsetInterExprContext.prototype.constructor = IntsetInterExprContext;

YasParser.IntsetInterExprContext = IntsetInterExprContext;

IntsetInterExprContext.prototype.intsetLiteral = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(IntsetLiteralContext);
    } else {
        return this.getTypedRuleContext(IntsetLiteralContext,i);
    }
};
IntsetInterExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.enterIntsetInterExpr(this);
	}
};

IntsetInterExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof YasListener ) {
        listener.exitIntsetInterExpr(this);
	}
};



YasParser.IntsetExprContext = IntsetExprContext;

YasParser.prototype.intsetExpr = function() {

    var localctx = new IntsetExprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, YasParser.RULE_intsetExpr);
    try {
        this.state = 85;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
        switch(la_) {
        case 1:
            localctx = new IntsetParenExprContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 67;
            this.match(YasParser.T__0);
            this.state = 68;
            this.intsetExpr();
            this.state = 69;
            this.match(YasParser.T__1);
            break;

        case 2:
            localctx = new IntsetDiffExprContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 71;
            this.intsetLiteral();
            this.state = 72;
            this.match(YasParser.T__5);
            this.state = 73;
            this.intsetLiteral();
            break;

        case 3:
            localctx = new IntsetInterExprContext(this, localctx);
            this.enterOuterAlt(localctx, 3);
            this.state = 75;
            this.intsetLiteral();
            this.state = 76;
            this.match(YasParser.T__6);
            this.state = 77;
            this.intsetLiteral();
            break;

        case 4:
            localctx = new IntsetUnionExprContext(this, localctx);
            this.enterOuterAlt(localctx, 4);
            this.state = 79;
            this.intsetLiteral();
            this.state = 80;
            this.match(YasParser.T__7);
            this.state = 81;
            this.intsetLiteral();
            break;
